ws-slo/clusters/telsha/overlays/tailnet/patch-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: telsha-webhook
  namespace: flux-system
